--- a/signIn.html
+++ b/signIn.html
@@ -26,7 +26,7 @@
     </nav>
     </header>
 
-    <form class="form-signin" action="index.html" method="post">
+    <form class="form-signin" action="" method="post">
         <h2 class="form-signin-heading">Sign In</h2>
         <div class="form-row">
             <label for="email"></label>
