--- a/signIn.html
+++ b/signIn.html
@@ -38,7 +38,9 @@
                  autofocus="" />
         </div>
         <input type="password" class="form-control" name="password" placeholder="Password" required="" />
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <div class="button1">
+            <button type="submit" class="btn-primary" onclick="alert('Successfully Sign-In!')">Sign In</button>
+        </div>
     </form>
     
 
