--- a/signIn.html
+++ b/signIn.html
@@ -25,19 +25,19 @@
         <a href="signIn.html" class="nav-link active">Sign-In</a>
     </nav>
     </header>
-
-    <form class="form-signin" action="" method="post">
-        <h2 class="form-signin-heading">Sign In</h2>
+    <form action="" method="" class="customer-form">
+    
         <div class="form-row">
-            <label for="email"></label>
+            <label for="email">Email:</label>
             <input id="email" 
-                 name="email"
-                 type="email"
-                 placeholder="Email/Username" 
-                 required=""
-                 autofocus="" />
-        </div>
+             name="email"
+             type="email"
+             placeholder="Email"
+             required="" />
+             
+             <label for="password">Password:</label>
         <input type="password" class="form-control" name="password" placeholder="Password" required="" />
+    </div>
         <div class="button1">
             <button type="submit" class="btn-primary" onclick="alert('Successfully Sign-In!')">Sign In</button>
         </div>
